--- a/server/package.json
+++ b/server/package.json
@@ -31,9 +31,9 @@
   "repository": "git@github.com:alan-hadyk/side-stacker-game.git",
   "scripts": {
     "build": "rm -rf dist/ && tsc -p ./tsconfig.build.json",
-    "dev": "NODE_ENV=development ts-node-dev -r tsconfig-paths/register --project tsconfig.json src/app.ts",
+    "dev": "NODE_ENV=development ts-node-dev -r tsconfig-paths/register --project tsconfig.json src/index.ts",
     "lint": "eslint 'src/**/*.{ts,tsx}' --fix",
-    "start": "NODE_ENV=production node -r module-alias/register dist/app.js"
+    "start": "NODE_ENV=production node -r module-alias/register dist/index.js"
   },
   "version": "1.0.0",
   "_moduleAliases": {
