--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -6,7 +6,7 @@
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "plugin:@typescript-eslint/recommended-requiring-type-checking", "plugin:react-hooks/recommended", "plugin:import/recommended", "plugin:import/typescript", "plugin:prettier/recommended"],
   "overrides": [
     {
-      "files": ["vite.config.ts", "src/App.tsx"], 
+      "files": ["vite.config.ts"], 
       "rules": {
         "import/no-default-export": "off"
       }
