--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "author": "alan-hadyk <alan.hadyk@gmail.com>",
   "description": "Server for Side-Stacker game",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "slonik": "^34.0.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
