--- a/server/package.json
+++ b/server/package.json
@@ -36,7 +36,9 @@
   "repository": "git@github.com:alan-hadyk/side-stacker-game.git",
   "scripts": {
     "build": "rm -rf dist/ && tsc -p ./tsconfig.build.json",
-    "dev": "NODE_ENV=development ts-node-dev -r tsconfig-paths/register --project tsconfig.json src/index.ts",
+    "db:start": "docker-compose up db -d",
+    "db:stop": "docker-compose down",
+    "dev": "NODE_ENV=development npm run db:start && ts-node-dev -r tsconfig-paths/register --project tsconfig.json src/index.ts",
     "lint": "eslint 'src/**/*.{ts,tsx}' --fix",
     "start": "NODE_ENV=production node -r module-alias/register dist/index.js"
   },
