--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "author": "alan-hadyk <alan.hadyk@gmail.com>",
   "description": "Server for Side-Stacker game",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "slonik": "^34.0.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -34,7 +36,9 @@
   "repository": "git@github.com:alan-hadyk/side-stacker-game.git",
   "scripts": {
     "build": "rm -rf dist/ && tsc -p ./tsconfig.build.json",
-    "dev": "NODE_ENV=development ts-node-dev -r tsconfig-paths/register --project tsconfig.json src/index.ts",
+    "db:start": "docker-compose up db -d",
+    "db:stop": "docker-compose down",
+    "dev": "NODE_ENV=development npm run db:start && ts-node-dev -r tsconfig-paths/register --project tsconfig.json src/index.ts",
     "lint": "eslint 'src/**/*.{ts,tsx}' --fix",
     "start": "NODE_ENV=production node -r module-alias/register dist/index.js"
   },
