--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
   "repository": "git@github.com:alan-hadyk/side-stacker-game.git",
   "scripts": {
     "build": "rm -rf dist/ && tsc -p ./tsconfig.build.json",
+    "db:reverse-migration": "NODE_ENV=development npm run db:start && ts-node-dev -r tsconfig-paths/register --project tsconfig.json src/db/scripts/reverseLastDbMigration.ts",
     "db:start": "docker-compose up db -d",
     "db:stop": "docker-compose down",
     "dev": "NODE_ENV=development npm run db:start && ts-node-dev -r tsconfig-paths/register --project tsconfig.json src/index.ts",
