--- a/server/package.json
+++ b/server/package.json
@@ -6,12 +6,17 @@
   "description": "Server for Side-Stacker game",
   "dependencies": {
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "slonik": "^34.0.1",
+    "socket.io": "^4.7.1",
+    "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^20.4.2",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "eslint": "^8.45.0",
