--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@tanstack/react-query": "^4.32.0",
     "@tanstack/router": "^0.0.1-beta.115",
+    "@tanstack/router-devtools": "^0.0.1-beta.115",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
