--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,12 @@
   "description": "Client for Side-Stacker game",
   "dependencies": {
     "@tanstack/react-query": "^4.32.0",
+    "@tanstack/react-query-devtools": "^4.32.0",
     "@tanstack/router": "^0.0.1-beta.115",
     "@tanstack/router-devtools": "^0.0.1-beta.115",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.25",
