Update README, use server types for API

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -23,7 +23,8 @@
     /* Absolute paths */
 		"baseUrl": ".",
     "paths": {
-      "@app/*": ["./src/*"]
+      "@app/*": ["./src/*"],
+      "@server/*": ["../server/src/*"],
     }
   },
   "include": ["src"],
