--- a/client/package.json
+++ b/client/package.json
@@ -2,10 +2,19 @@
   "author": "alan-hadyk <alan.hadyk@gmail.com>",
   "description": "Client for Side-Stacker game",
   "dependencies": {
+    "@tanstack/react-query": "^4.32.0",
+    "@tanstack/react-query-devtools": "^4.32.0",
+    "@tanstack/router": "^0.0.1-beta.115",
+    "axios": "^1.4.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^4.29.25",
+    "@types/lodash": "^4.14.195",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
@@ -23,6 +32,7 @@
     "postcss": "^8.4.26",
     "prettier": "^3.0.0",
     "tailwindcss": "^3.3.3",
+    "tailwindcss-3d": "^0.2.6",
     "typescript": "^5.0.2",
     "vite": "^4.4.0",
     "vite-tsconfig-paths": "^4.2.0"
