--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-icons": "^4.10.1",
     "socket.io-client": "^4.7.1",
     "usehooks-ts": "^2.9.1"
   },
