--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@tanstack/react-query-devtools": "^4.32.0",
     "@tanstack/router": "^0.0.1-beta.115",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
