--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "lodash": "^4.17.21",
     "slonik": "^34.0.1",
     "socket.io": "^4.7.1",
+    "unique-names-generator": "^4.7.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
