--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -23,7 +23,7 @@
     /* Absolute paths */
 		"baseUrl": ".",
     "paths": {
-      "@app/*": ["./src/*"],
+      "@client/*": ["./src/*"],
       "@server/*": ["../server/src/*"],
     }
   },
