--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -8,3 +8,8 @@ services:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
       POSTGRES_DB: database
+
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
