--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -6,6 +6,14 @@
     "plugin:import/typescript",
     "plugin:prettier/recommended"
   ],
+  "overrides": [
+    {
+      "files": ["jest.config.ts"], 
+      "rules": {
+        "import/no-default-export": "off"
+      }
+    }
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 2020,
