--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -3,5 +3,5 @@
         "baseUrl": ".",      
     },
     "extends": "./tsconfig.json",
-    "exclude": ["**/*.test.ts", "**/*.spec.ts"]
+    "exclude": ["**/*.test.ts", "**/*.spec.ts", "**/__mocks__"]
 }
