--- a/server/package.json
+++ b/server/package.json
@@ -58,7 +58,7 @@
     "db:reverse-migration": "NODE_ENV=development npm run db:start && ts-node-dev -r tsconfig-paths/register --project tsconfig.json src/db/scripts/reverseLastDbMigration.ts",
     "db:test:start": "docker-compose up test_db -d",
     "db:start": "docker-compose up db -d",
-    "db:stop": "docker-compose down",
+    "docker:stop": "docker-compose down",
     "dead-code": "ts-prune",
     "dev": "NODE_ENV=development npm run db:start && NODE_ENV=development npm run redis:start && NODE_ENV=development ts-node-dev -r tsconfig-paths/register --project tsconfig.json src/index.ts",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
