--- a/.github/workflows/server-tests.yml
+++ b/.github/workflows/server-tests.yml
@@ -38,7 +38,7 @@ jobs:
         working-directory: ./server
 
       - name: Run Tests
-        run: yarn test
+        run: yarn test:ci
         working-directory: ./server
         env:
           NODE_ENV: test
