--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,12 @@
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.36.2",
     "@tanstack/eslint-plugin-query": "^4.29.25",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@types/lodash": "^4.14.195",
+    "@types/node": "^20.4.5",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
@@ -29,6 +31,7 @@
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.2.1",
+    "dotenv": "^16.3.1",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
@@ -60,7 +63,9 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:e2e": "npx playwright install && playwright test",
+    "test:e2e:ui": "npx playwright install && playwright test --ui"
   },
   "type": "module",
   "version": "0.0.0"
