--- a/client/tsconfig.node.json
+++ b/client/tsconfig.node.json
@@ -6,5 +6,5 @@
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts", "tailwind.config.ts", ".eslintrc.cjs"]
+  "include": ["vite.config.ts", "vitest.config.ts", "tailwind.config.ts", ".eslintrc.cjs", "./tests/setup.ts", "playwright.config.ts", "e2e/*"]
 }
