--- a/server/package.json
+++ b/server/package.json
@@ -20,8 +20,10 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
+    "@types/jest": "^29.5.3",
     "@types/lodash": "^4.14.195",
     "@types/node": "^20.4.2",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
@@ -30,8 +32,13 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-typescript-sort-keys": "^2.3.0",
+    "jest": "^29.6.2",
     "module-alias": "^2.2.3",
     "prettier": "^3.0.0",
+    "qs": "^6.11.2",
+    "supertest": "^6.3.3",
+    "supertest-session": "^4.1.0",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "ts-prune": "^0.10.3",
     "tsconfig-paths": "^4.2.0",
@@ -49,14 +56,19 @@
   "scripts": {
     "build": "rm -rf dist/ && tsc -p ./tsconfig.build.json",
     "db:reverse-migration": "NODE_ENV=development npm run db:start && ts-node-dev -r tsconfig-paths/register --project tsconfig.json src/db/scripts/reverseLastDbMigration.ts",
+    "db:test:start": "docker-compose up test_db -d",
     "db:start": "docker-compose up db -d",
-    "db:stop": "docker-compose down",
+    "docker:stop": "docker-compose down",
     "dead-code": "ts-prune",
     "dev": "NODE_ENV=development npm run db:start && NODE_ENV=development npm run redis:start && NODE_ENV=development ts-node-dev -r tsconfig-paths/register --project tsconfig.json src/index.ts",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "lint:fix": "eslint 'src/**/*.{ts,tsx}' --fix",
+    "redis:test:start": "docker-compose up test_redis -d",
     "redis:start": "docker-compose up redis -d",
-    "start": "NODE_ENV=production node -r module-alias/register dist/index.js"
+    "start": "NODE_ENV=production node -r module-alias/register dist/index.js",
+    "test": "NODE_ENV=test npm run db:test:start && NODE_ENV=test npm run redis:test:start && NODE_ENV=test jest --coverage --runInBand",
+    "test:ci": "NODE_ENV=test jest --coverage --runInBand",
+    "test:watch": "NODE_ENV=test npm run db:test:start && NODE_ENV=test npm run redis:test:start && NODE_ENV=test jest --watch --runInBand"
   },
   "version": "1.0.0"
 }
